--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/libStyle.css">
     <script src="js/script.js" defer></script>
     <script src="js/booksScript.js" defer></script>
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Cad Livros</title>
 </head>
 <body>
     <header class="efeito-vidro">
