--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/loginStyle.css">
     <script src="js/script.js" defer></script>
     <script src="js/logSistem.js" defer></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Login</title>
 </head>
 <body>
