--- a/account.html
+++ b/account.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles/accountStyle.css">
     <script src="js/script.js" defer></script>
     <script src="js/accountScript.js" defer></script>
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Contas</title>
 </head>
 <body>
     <header class="efeito-vidro">
