--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h1>Registro de livros</h1>
         <p id="userName"></p>
         <button id="btn_log" onclick="log()">Login</button>
-        <button><a href="account.html">Account</a></button>
+        <button><a href="account.html">Contas</a></button>
     </header>
 
     <main>
         <section class="left efeito-vidro">
             <form method="post">
-                <label for="name">Nome: </label>
+                <label for="name">Titulo: </label>
                 <input type="text" name="name" id="name">
                 <label for="author">Autor: </label>
                 <input type="text" name="author" id="author">
