--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <form>
             <label for="email">Email: </label>
             <input type="email" name="email" id="email">
-            <label for="pass">Password: </label>
+            <label for="pass">Senha: </label>
             <input type="password" name="pass" id="pass">
             <div>
                 <button onclick="doLogin()">Login</button>
